--- a/index.html
+++ b/index.html
@@ -474,13 +474,13 @@
       <div class="logo">
         <div class="logo-mark"></div>
         <div>
-          <div style="font-size:0.95rem;">Your Game Dev</div>
+          <div style="font-size:0.95rem;">My Game Dev</div>
           <span>Unity / Indie Dev</span>
         </div>
       </div>
 
       <nav>
-        <a href="/index.html" class="active">Home</a>
+        <a href="https://natanosuke.github.io/Horishima_Lab/" class="active">Home</a>
         <a href="/games.html">Games</a>
         <a href="/dev-notes.html">Dev Notes</a>
         <a href="/blog.html">Blog</a>
