--- a/games.html
+++ b/games.html
@@ -388,6 +388,15 @@
       color: var(--accent);
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4S94TX80NK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4S94TX80NK');
+</script>
 </head>
 <body>
 
@@ -397,7 +406,7 @@
       <div class="logo">
         <div class="logo-mark"></div>
         <div>
-          <div style="font-size:0.95rem;">Your Game Dev</div>
+          <div style="font-size:0.95rem;">My Game Dev</div>
           <span>Unity / Indie Dev</span>
         </div>
       </div>
@@ -453,7 +462,7 @@
       </div>
 
       <div class="game-grid">
-        <!-- Game 1 -->
+        <!-- Game 1 --><!--
         <article class="game-card" id="game-1">
           <div class="game-card-header">
             <div class="game-title">Game Title 1</div>
@@ -474,14 +483,14 @@
             </div>
             <span>プレイ時間目安：20〜40分</span>
           </div>
-          <div class="game-links">
+          <div class="game-links">-->
             <!-- 実際のURLに差し替え -->
             <!-- <a href="https://..." class="game-link" target="_blank">ダウンロード</a> -->
             <!-- <a href="https://..." class="game-link" target="_blank">itch.io / Booth など</a> -->
-          </div>
-        </article>
+          <!--</div>
+        </article>-->
 
-        <!-- Game 2 -->
+        <!-- Game 2 --><!--
         <article class="game-card" id="game-2">
           <div class="game-card-header">
             <div class="game-title">Game Title 2</div>
@@ -505,9 +514,9 @@
           <div class="game-links">
             <a href="/blog.html" class="game-link">開発ログ（Blog）を見る →</a>
           </div>
-        </article>
+        </article>-->
 
-        <!-- Game 3 -->
+        <!-- Game 3 --><!--
         <article class="game-card" id="game-3">
           <div class="game-card-header">
             <div class="game-title">Game Title 3</div>
@@ -530,9 +539,9 @@
           <div class="game-links">
             <a href="/dev-notes.html" class="game-link">関連するDev Notes →</a>
           </div>
-        </article>
+        </article>-->
 
-        <!-- Game 4（ダミー） -->
+        <!-- Game 4（ダミー） --><!--
         <article class="game-card">
           <div class="game-card-header">
             <div class="game-title">Game Title 4</div>
@@ -552,7 +561,7 @@
             </div>
             <span>制作期間：2〜3日</span>
           </div>
-          <div class="game-links">
+          <div class="game-links">-->
             <!-- itch.io やブラウザプレイなど -->
           </div>
         </article>
