--- a/index.html
+++ b/index.html
@@ -465,6 +465,15 @@
       color: var(--accent);
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4S94TX80NK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4S94TX80NK');
+</script>
 </head>
 <body>
 
@@ -480,7 +489,7 @@
       </div>
 
       <nav>
-        <a href="https://natanosuke.github.io/Horishima_Lab/" class="active">Home</a>
+        <a href="/index.html" class="active">Home</a>
         <a href="/games.html">Games</a>
         <a href="/dev-notes.html">Dev Notes</a>
         <a href="/blog.html">Blog</a>
@@ -528,17 +537,17 @@
     </section>
 
     <!-- 代表作3つ -->
-    <section>
+    <section><!--
       <div class="section-header">
         <div>
           <h2 class="section-title">代表作 / ピックアップ</h2>
           <p class="section-sub">よく聞かれそうな3作品をピックアップしています。詳しくは Games ページへ。</p>
         </div>
         <a href="/games.html" class="btn-ghost">Games一覧へ →</a>
-      </div>
+      </div>-->
 
-      <div class="game-grid">
-        <!-- Game 1 -->
+      <!--<div class="game-grid">-->
+        <!-- Game 1 --><!--
         <article class="game-card">
           <div class="game-thumb">
             サムネイル画像（後で差し替え）
@@ -556,12 +565,12 @@
             <span>開発中 / 公開中</span>
           </div>
           <div class="game-links">
-            <a href="/games.html#game-1" class="game-link">詳細を見る</a>
+            <a href="/games.html#game-1" class="game-link">詳細を見る</a>-->
             <!-- <a href="https://..." class="game-link" target="_blank">ダウンロード</a> -->
-          </div>
-        </article>
+          <!--</div>
+        </article>-->
 
-        <!-- Game 2 -->
+        <!-- Game 2 --><!--
         <article class="game-card">
           <div class="game-thumb">
             サムネイル画像（後で差し替え）
@@ -581,9 +590,9 @@
           <div class="game-links">
             <a href="/games.html#game-2" class="game-link">詳細を見る</a>
           </div>
-        </article>
+        </article>-->
 
-        <!-- Game 3 -->
+        <!-- Game 3 --><!--
         <article class="game-card">
           <div class="game-thumb">
             サムネイル画像（後で差し替え）
@@ -605,7 +614,7 @@
           </div>
         </article>
       </div>
-    </section>
+    </section>-->
 
     <!-- 下の導線 -->
     <section class="bottom-links">
@@ -642,10 +651,7 @@
   <!-- フッター -->
   <footer>
     <div class="footer-inner">
-      <div>© <span id="year"></span> Your Game Dev Portfolio</div>
-      <div>
-        <a href="https://github.com/yourname" target="_blank" rel="noopener noreferrer">GitHub</a>
-      </div>
+      <div>© <span id="year"></span> My Game Dev Portfolio</div>
     </div>
   </footer>
 
