--- a/support.html
+++ b/support.html
@@ -466,6 +466,15 @@
       color: var(--accent);
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4S94TX80NK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4S94TX80NK');
+</script>
 </head>
 <body>
 
@@ -475,7 +484,7 @@
       <div class="logo">
         <div class="logo-mark"></div>
         <div>
-          <div style="font-size:0.95rem;">Your Game Dev</div>
+          <div style="font-size:0.95rem;">My Game Dev</div>
           <span>Unity / Indie Dev</span>
         </div>
       </div>
@@ -507,7 +516,6 @@
         </p>
         <div class="hero-meta">
           <span>☕ Ko-fi での投げ銭</span>
-          <span>🛒 Booth での作品・デジタル配布</span>
         </div>
       </div>
 
@@ -562,7 +570,7 @@
             </ul>
           </div>
           <div class="support-actions">
-            <a class="support-button" href="https://ko-fi.com/yourname" target="_blank" rel="noopener noreferrer">
+            <a class="support-button" href="https://ko-fi.com/yourname-" target="_blank" rel="noopener noreferrer">
               Ko-fi ページへ
             </a>
             <span class="support-note">※ <code>yourname</code> を自分のIDに変更してください。</span>
@@ -570,7 +578,7 @@
         </article>
 
         <!-- Booth -->
-        <article class="support-card">
+        <!-- <article class="support-card">
           <div class="support-card-header">
             <div class="support-name">Booth</div>
             <div class="support-label">作品販売</div>
@@ -595,7 +603,7 @@
           </div>
         </article>
       </div>
-    </section>
+    </section>-->
 
     <!-- その他 / FAQ 的な -->
     <section>
