--- a/dev-notes.html
+++ b/dev-notes.html
@@ -538,6 +538,15 @@
       color: var(--accent);
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4S94TX80NK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4S94TX80NK');
+</script>
 </head>
 <body>
 
@@ -547,7 +556,7 @@
       <div class="logo">
         <div class="logo-mark"></div>
         <div>
-          <div style="font-size:0.95rem;">Your Game Dev</div>
+          <div style="font-size:0.95rem;">My Game Dev</div>
           <span>Unity / Indie Dev</span>
         </div>
       </div>
