相対パスに変更

--- a/index.html
+++ b/index.html
@@ -489,11 +489,11 @@
       </div>
 
       <nav>
-        <a href="/index.html" class="active">Home</a>
-        <a href="/games.html">Games</a>
-        <a href="/dev-notes.html">Dev Notes</a>
-        <a href="/blog.html">Blog</a>
-        <a href="/support.html">Support</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="games.html">Games</a>
+        <a href="dev-notes.html">Dev Notes</a>
+        <a href="blog.html">Blog</a>
+        <a href="support.html">Support</a>
       </nav>
     </div>
   </header>
