--- a/support.html
+++ b/support.html
@@ -490,11 +490,11 @@
       </div>
 
       <nav>
-        <a href="/index.html">Home</a>
-        <a href="/games.html">Games</a>
-        <a href="/dev-notes.html">Dev Notes</a>
-        <a href="/blog.html">Blog</a>
-        <a href="/support.html" class="active">Support</a>
+        <a href="index.html">Home</a>
+        <a href="games.html">Games</a>
+        <a href="dev-notes.html">Dev Notes</a>
+        <a href="blog.html">Blog</a>
+        <a href="support.html" class="active">Support</a>
       </nav>
     </div>
   </header>
