--- a/blog.html
+++ b/blog.html
@@ -562,11 +562,11 @@
       </div>
 
       <nav>
-        <a href="/index.html">Home</a>
-        <a href="/games.html">Games</a>
-        <a href="/dev-notes.html">Dev Notes</a>
-        <a href="/blog.html" class="active">Blog</a>
-        <a href="/support.html">Support</a>
+        <a href="index.html">Home</a>
+        <a href="games.html">Games</a>
+        <a href="dev-notes.html">Dev Notes</a>
+        <a href="blog.html" class="active">Blog</a>
+        <a href="support.html">Support</a>
       </nav>
     </div>
   </header>
