--- a/dev-notes.html
+++ b/dev-notes.html
@@ -562,11 +562,11 @@
       </div>
 
       <nav>
-        <a href="/index.html">Home</a>
-        <a href="/games.html">Games</a>
-        <a href="/dev-notes.html" class="active">Dev Notes</a>
-        <a href="/blog.html">Blog</a>
-        <a href="/support.html">Support</a>
+        <a href="index.html">Home</a>
+        <a href="games.html">Games</a>
+        <a href="dev-notes.html" class="active">Dev Notes</a>
+        <a href="blog.html">Blog</a>
+        <a href="support.html">Support</a>
       </nav>
     </div>
   </header>
