--- a/games.html
+++ b/games.html
@@ -412,11 +412,11 @@
       </div>
 
       <nav>
-        <a href="/index.html">Home</a>
-        <a href="/games.html" class="active">Games</a>
-        <a href="/dev-notes.html">Dev Notes</a>
-        <a href="/blog.html">Blog</a>
-        <a href="/support.html">Support</a>
+        <a href="index.html">Home</a>
+        <a href="games.html" class="active">Games</a>
+        <a href="dev-notes.html">Dev Notes</a>
+        <a href="blog.html">Blog</a>
+        <a href="support.html">Support</a>
       </nav>
     </div>
   </header>
