サイトマップ修正

--- a/dev-notes.html
+++ b/dev-notes.html
@@ -28,8 +28,7 @@
       <div class="logo">
         <div class="logo-mark"></div>
         <div>
-          <div style="font-size:0.95rem;">My Game Dev</div>
-          <span>Unity / Indie Dev</span>
+          <div style="font-size:0.95rem;">Horishima_GameLab</div>
         </div>
       </div>
 
@@ -125,10 +124,7 @@
   <!-- フッター -->
   <footer>
     <div class="footer-inner">
-      <div>© <span id="year"></span> Your Game Dev Notes</div>
-      <div>
-        <a href="https://github.com/yourname" target="_blank" rel="noopener noreferrer">GitHub</a>
-      </div>
+      <div>© <span id="year"></span> My Game Dev Notes</div>
     </div>
   </footer>
 
@@ -140,7 +136,7 @@
         title: "Unity・Azure DevOps・SourceTreeの連携方法について",
         tags: ["Unity", "Azure DevOps", "Sourcetree"],
         body: "ゲーム開発でバージョン管理するためUnity・Azure DevOps・SourceTreeを連携するための覚書でです。",
-        url: "../dev-notes/2025/dev1.html",
+        url: "dev-notes/2025/dev1.html",
         date: "2025-12-18"
       },
     ];
