--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
       <div class="logo">
         <div class="logo-mark"></div>
         <div>
-          <div style="font-size:0.95rem;">My Game Dev</div>
-          <span>Unity / Indie Dev</span>
+          <div style="font-size:0.95rem;">Horishima_GameLab</div>
         </div>
       </div>
 
@@ -195,6 +194,9 @@
 
   <!-- フッター -->
   <footer>
+        <nav class="footer-inner">
+      <a href="/sitemap.html">サイトマップ</a>
+    </nav>
     <div class="footer-inner">
       <div>© <span id="year"></span> My Game Dev Portfolio</div>
     </div>
