--- a/blog.html
+++ b/blog.html
@@ -28,8 +28,7 @@
       <div class="logo">
         <div class="logo-mark"></div>
         <div>
-          <div style="font-size:0.95rem;">My Game Dev</div>
-          <span>Unity / Indie Dev</span>
+          <div style="font-size:0.95rem;">Horishima_GameLab</div>
         </div>
       </div>
 
@@ -124,10 +123,7 @@
   <!-- フッター -->
   <footer>
     <div class="footer-inner">
-      <div>© <span id="year"></span> Your Game Dev Blog</div>
-      <div>
-        <a href="https://github.com/yourname" target="_blank" rel="noopener noreferrer">GitHub</a>
-      </div>
+      <div>© <span id="year"></span> My Game Dev Blog</div>
     </div>
   </footer>
 
