--- a/dev-notes.html
+++ b/dev-notes.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Dev Notes | Game Dev Log</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <!-- フォント（不要なら削除OK） -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,7 +59,7 @@
           すぐ引っ張り出せる自分専用リファレンス。
         </p>
         <div class="hero-meta">
-          <span>⚙ Unity / C# / DOTween</span>
+          <span>⚙ Unity / C# / Git / Dot絵</span>
           <span>🧠 備忘録 + 実戦で使ったノウハウ</span>
         </div>
       </div>
@@ -78,10 +79,11 @@
               よく使うキーワードの一例：
             </p>
             <div>
-              <span class="glass-pill"><span class="dot"></span>DOTween / Tween</span>
-              <span class="glass-pill"><span class="dot"></span>ScriptableObject</span>
+              <span class="glass-pill"><span class="dot"></span>Git</span>
+              <span class="glass-pill"><span class="dot"></span>Unity</span>
               <span class="glass-pill"><span class="dot"></span>Save / Load</span>
-              <span class="glass-pill"><span class="dot"></span>Addressable / Asset管理</span>
+              <span class="glass-pill"><span class="dot"></span>UI / Asset管理</span>
+              <span class="glass-pill"><span class="dot"></span>Dot絵</span>
             </div>
             <p style="margin-top:0.55rem; font-size:0.78rem; opacity:0.9;">
               検索はタイトル・タグ・本文が対象。<br>
@@ -97,7 +99,7 @@
       <div class="search-row">
         <div class="search-label">キーワード検索</div>
         <div class="search-input-wrap">
-          <input id="search-input" type="search" placeholder="例: DOTween / ScriptableObject / セーブ / UI など" />
+          <input id="search-input" type="search" placeholder="例: Unity / Git / Sourcetree / UI など" />
           <span class="search-icon">⌕</span>
         </div>
       </div>
@@ -134,7 +136,7 @@
        {
         id: "devnote-001",
         title: "Unity・Azure DevOps・SourceTreeの連携方法について",
-        tags: ["Unity", "Azure DevOps", "Sourcetree"],
+        tags: [ "Azure DevOps", "Sourcetree", "Git", "Unity" ],
         body: "ゲーム開発でバージョン管理するためUnity・Azure DevOps・SourceTreeを連携するための覚書でです。",
         url: "dev-notes/2025/dev1.html",
         date: "2025-12-18"
