サイトマップ修正

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
   <!-- フッター -->
   <footer>
         <nav class="footer-inner">
-      <a href="/sitemap.html">サイトマップ</a>
+      <a href="/sitemapdev.html">サイトマップ</a>
     </nav>
     <div class="footer-inner">
       <div>© <span id="year"></span> My Game Dev Portfolio</div>
